--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body{
     background: #000;
     color: #fff;
     overflow-x: hidden;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     font-size: 12px;
     margin: 0em;
 }
@@ -258,13 +258,13 @@ body{
 #touch-controls {
     display: none;
     position: fixed;
-    bottom: 50%;
+    bottom: 20px;
     left: 50%;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%);
     width: 150px;
     height: 150px;
-    pointer-events: none;
-    z-index: 100;
+    pointer-events: auto;
+    z-index: 1000;
     touch-action: none;
 }
 
